--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,5 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
+vlad: 
+  name: vlad 
+  surname: saraev
+  email: vlad@hotmail.co.nz
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
 
 
